small fix on messagenavigation

--- a/client/src/components/Pages/Messages/Messages.css
+++ b/client/src/components/Pages/Messages/Messages.css
@@ -6,6 +6,7 @@
 .msg-contacts-container {
   background-color: var(--grey);
   min-width: 250px;
+  max-width: 250px;
   height: calc(100vh - var(--navbar-height));
 }
 
