--- a/client/src/components/Pages/Registrations/Registrations.css
+++ b/client/src/components/Pages/Registrations/Registrations.css
@@ -5,30 +5,95 @@
   justify-content: center;
   align-items: center;
 }
-.registration-form-container {
+.registration-items-container {
   background-color: white;
   padding: 30px;
   box-shadow: 0 0 10pt 3pt var(--grey);
+  border-radius: 5px;
+  height: 500px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.blue-button-container {
+.registration-title-and-logo-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.registration-title-and-logo-container h2 {
+  font-weight: 250;
+}
+
+.registration-container form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.registration-inputs-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.registration-inputs-container input {
+  width: 100%;
+  text-align: center;
+  padding: 10px 0;
+  margin: 10px 0;
+  border-radius: 50px;
+  border: 1px solid var(--grey);
+}
+
+.registration-inputs-container input:focus {
+  outline: none;
+  border: 1px solid var(--blue);
+}
+
+.registration-submit-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.blue-button {
   margin: 10px;
   height: 30px;
-  width: fit-content;
-  min-width: 50px;
+  width: 100%;
   white-space: nowrap;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5px 10px;
+  padding: 20px 0;
   background-color: var(--blue);
   border-radius: 5px;
   color: white;
   border: none;
   box-shadow: 0 0 3pt 1pt var(--grey);
+  font-size: 1.1em;
 }
 
-.blue-button-container:hover {
+.blue-button:hover {
   background-color: var(--dark-blue);
   cursor: pointer;
+}
+
+.registration-switch-view-text, .registration-switch-view-text a {
+  color: var(--bg-grey);
+  text-align: center;
+}
+
+.registration-switch-view-text a:hover {
+  color: var(--dark-blue);
+}
+
+@media screen and (max-width: 580px) {
+  .registration-items-container {
+    width: 80vw;
+    height: 80vh;
+  }
 }
