--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -344,7 +344,12 @@
 
 /* TITLE AND LOGO */
 .title-and-logo {
-  color: var(--black);
+  color: var(--blue);
   text-shadow: 0.5pt 0.5pt 1pt var(--grey);
   font-weight: 230;
+}
+
+.title-and-logo:hover {
+  color: var(--dark-blue);
+  cursor: pointer;
 }
