--- a/client/src/components/Pages/Registrations/Registrations.css
+++ b/client/src/components/Pages/Registrations/Registrations.css
@@ -3,18 +3,29 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  overflow: scroll;
 }
+
 .registration-items-container {
   background-color: white;
   padding: 30px;
+  margin: 7vh 0;
   box-shadow: 0 0 10pt 3pt var(--grey);
   border-radius: 5px;
-  height: 500px;
+  height: 400px;
   width: 300px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.registration-items-container.signin {
+  height: 400px;
+}
+
+.registration-items-container.signup {
+  height: 700px;
 }
 
 .registration-title-and-logo-container {
@@ -93,7 +104,9 @@
 
 @media screen and (max-width: 580px) {
   .registration-items-container {
+    margin: 1vh 0;
     width: 80vw;
     height: 80vh;
+    overflow: scroll;
   }
 }
