--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -173,6 +173,13 @@
   padding: 0 1ch 0 2ch;
 }
 
+.searchbar-outline.empty::before {
+  content: "Search";
+  position: absolute;
+  color: var(--bg-grey);
+  font-size: 0.9rem;
+}
+
 .searchbar-input {
   color: var(--searchbar-color);
   background-color: transparent;
