--- a/client/src/components/Navbar/Dropdowns/Dropdown.css
+++ b/client/src/components/Navbar/Dropdowns/Dropdown.css
@@ -3,29 +3,35 @@
   position: absolute;
   width: 300px;
   height: 450px;
-  top: calc(var(--navbar-height) - 5px);
+  top: -500px;
   right: 0;
   overflow: scroll;
   border-radius: 10px;
-  box-shadow: 2pt 1pt 3pt var(--dark-blue);
-  animation-name: dropdown-desktop-animation;
-  animation-duration: 0.4s;
+  box-shadow: 0 0 1pt 1pt var(--bg-grey);
+  opacity: 0;
+  transition: top 0.4s ease, opacity 0.4s ease;
+  z-index: 0;
 }
 
-.dropdown::before {
-  content: "";
+.dropdown.active {
+  top: calc(var(--navbar-height) - 5px);
+  opacity: 1;
+}
+
+/* .dropdown::before {
+  content: "abc";
   position: absolute;
   width: 0;
   height: 0;
-  border-top: 10px solid var(--grey);
-  border-left: 10px solid var(--grey);
+  /* border-top: 10px solid var(--black);
+  border-left: 10px solid var(--black);
   border-right: 10px solid transparent;
-  border-bottom: 10px solid transparent;
+  border-bottom: 10px solid transparent; 
   top: -10px;
   right: 30px;
   transform: rotate(45deg);
-  z-index: -1;
-}
+  z-index: 50;
+} */
 
 .dropdown-profile {
   padding: 10px;
@@ -65,6 +71,7 @@
   font-size: 2em;
   color: var(--black);
   font-weight: 300;
+  padding: 10px 0;
 }
 
 .profile-switch-options {
@@ -75,6 +82,7 @@
 .notification-container {
   min-height: 50px;
   padding: 10px 0;
+  border-top: 1px solid var(--bg-grey);
   transition: background-color 0.2s ease;
 }
 .notification-container:hover {
