--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -6,9 +6,10 @@
   align-items: center;
   position: sticky;
   top: 0;
-  z-index: 20;
   font-size: 1rem;
   font-weight: 300;
+  z-index: 20;
+  box-shadow: 0 1pt 3pt 1pt var(--dark-blue);
 }
 
 .nav-container {
@@ -17,7 +18,6 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  /* max-width: 1500px; ?? why thou */
 }
 
 .nav-icon.nav-menu {
@@ -33,17 +33,14 @@
   display: flex;
   align-items: center;
   padding: 0 1rem;
-  /* margin-right: 2rem; */
 }
 
 .nav-logo {
   color: var(--bg-white);
   justify-content: flex-start;
   cursor: pointer;
-  /* Which cursor is shown when hovering */
   text-decoration: none;
   font-size: 1.5rem;
-  /* flex-grow: 1; */
 }
 
 .constant-links {
