--- a/client/src/components/Navbar/Dropdowns/Dropdown.css
+++ b/client/src/components/Navbar/Dropdowns/Dropdown.css
@@ -10,28 +10,12 @@
   box-shadow: 0 0 1pt 1pt var(--bg-grey);
   opacity: 0;
   transition: top 0.4s ease, opacity 0.4s ease;
-  z-index: 0;
 }
 
 .dropdown.active {
   top: calc(var(--navbar-height) - 5px);
   opacity: 1;
 }
-
-/* .dropdown::before {
-  content: "abc";
-  position: absolute;
-  width: 0;
-  height: 0;
-  /* border-top: 10px solid var(--black);
-  border-left: 10px solid var(--black);
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid transparent; 
-  top: -10px;
-  right: 30px;
-  transform: rotate(45deg);
-  z-index: 50;
-} */
 
 .dropdown-profile {
   padding: 10px;
@@ -91,39 +75,17 @@
 
 @media screen and (max-width: 580px) {
   .dropdown {
+    background-color: var(--grey);
+    position: absolute;
     width: 100%;
     height: calc(100vh - var(--navbar-height));
-    top: calc(var(--navbar-height) - 10px);
-    left: 0;
-    box-shadow: 1pt 1pt 3pt var(--dark-blue);
-    ;
+    top: -100vh;
     transform: scale(0.97);
-    animation-name: dropdown-mobile-animation;
-    animation-duration: 0.4s;
   }
-  .dropdown::before {
-    display: none;
-  }
-}
 
-@keyframes dropdown-mobile-animation {
-  from {
-    height: 0;
-    opacity: 0;
-  }
-  to {
-    height: calc(100vh - var(--navbar-height));
+  .dropdown.active {
+    top: calc(var(--navbar-height) - 5px);
     opacity: 1;
   }
-}
-
-@keyframes dropdown-desktop-animation {
-  from {
-    height: 0;
-    opacity: 0;
-  }
-  to {
-    height: 450px;
-    opacity: 1;
-  }
+  
 }
