--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -326,26 +326,26 @@
 
 /* CATEGORY SELECTION */
 
-.skills-container {
+.categories-container {
   height: 100%;
 }
 
-.skill-container {
+.category-container {
   border: 1px solid var(--bg-grey);
   border-radius: 5px;
   padding: 10px;
   margin: 5px;
 }
 
-.skill-container-selected {
+.category-container-selected {
   background-color: lightgreen;
 }
 
-.skill-container:hover {
+.category-container:hover {
   background-color: var(--grey);
 }
 
-.skill-container-selected:hover {
+.category-container-selected:hover {
   background-color: lightcoral;
 }
 
