--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -87,6 +87,14 @@
   font-size: 1.4rem;
 }
 
+.new-notifications::after {
+  content: '•';
+  color: red;
+  position: absolute;
+  top: 1px;
+  left: 30px;
+}
+
 @media screen and (max-width: 960px) {
   .nav-icon.nav-menu {
     color: var(--bg-white);
