--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -87,12 +87,16 @@
   font-size: 1.4rem;
 }
 
+.new-notifications {
+  position: relative;
+}
+
 .new-notifications::after {
   content: '•';
   color: red;
   position: absolute;
-  top: 1px;
-  left: 30px;
+  top: -8px;
+  left: 14px;
 }
 
 @media screen and (max-width: 960px) {
