--- a/client/src/components/Pages/Profiles/Profiles.css
+++ b/client/src/components/Pages/Profiles/Profiles.css
@@ -4,7 +4,6 @@
   flex-direction: column;
 }
 
-
 .profiles-title-and-searchbar-container {
   display: flex;
   flex-direction: row;
@@ -26,7 +25,7 @@
   flex-flow: row wrap;
 }
 
-.profile-container {
+.profile-card-container {
   margin: 20px;
 }
 
