show if user or group have notifications on profile drop

--- a/client/src/components/LoggedInPages/Navbar/Dropdowns/Dropdown.css
+++ b/client/src/components/LoggedInPages/Navbar/Dropdowns/Dropdown.css
@@ -83,6 +83,12 @@
   background-color: var(--bg-grey);
 }
 
+.alert-dot {
+  color: red;
+  /* font-size: 40px; */
+  line-height: 0;
+}
+
 @media screen and (max-width: 580px) {
   .dropdown {
     background-color: var(--grey);
