--- a/client/src/components/LoggedInPages/Pages/Messages/Navigation/MessageNavigation.css
+++ b/client/src/components/LoggedInPages/Pages/Messages/Navigation/MessageNavigation.css
@@ -1,6 +1,6 @@
 .msg-navigation {
   /* position: absolute; */
-  background-color: var(--bg-grey);
+  background-color: var(--grey);
   width: 100%;
   height: calc(100vh - var(--navbar-height));
   display: flex;
@@ -57,3 +57,11 @@
   right: 0;
   height: 100%;
 }
+/* 
+@media screen and (max-width: 580px) { 
+  .msg-navigation {
+    border-radius: 5px;
+    box-shadow: 0 0 1pt 1pt var(--grey);
+  }
+
+} */
