--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,10 +12,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: red;
+  background-color: rgb(255, 0, 0);
   color: white;
   max-height: 20px;
-  opacity: 0.5;
 }
 
 .app-container {
