--- a/client/src/components/LoggedInPages/Pages/Jobmarket/Jobmarket.css
+++ b/client/src/components/LoggedInPages/Pages/Jobmarket/Jobmarket.css
@@ -12,7 +12,7 @@
 }
 
 .job-navigation {
-  background-color: var(--bg-grey);
+  background-color: var(--grey);
   min-width: 250px;
   height: calc(100vh - var(--navbar-height));
   display: flex;
