--- a/client/src/components/LoggedInPages/Pages/Messages/Messages.css
+++ b/client/src/components/LoggedInPages/Pages/Messages/Messages.css
@@ -21,12 +21,11 @@
     min-width: 100%;
     max-width: 100%;
     top: -100%;
-    opacity: 0;
-    transition: all 0.4s ease;
+    transition: all 0.5s ease;
+    z-index: 10;
   }
 
   .msg-contacts-container.active {
     top: var(--navbar-height);
-    opacity: 1;
   }
 }
