--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@
   --dark-blue: #005b72;
   --red: #ba0038;
   --green: rgb(0, 177, 0);
+  --dark-green: rgb(0, 155, 0);
   --bg-grey: hsla(192, 17%, 60%, 0.52);
   --grey: #ccd8db;
   --black: #242424;
