--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@
   --dark-green: rgb(0, 155, 0);
   --bg-grey: hsla(192, 17%, 60%, 0.52);
   --grey: #ccd8db;
+  --dark-grey: #777777;
   --black: #242424;
 
   --navbar-height: 60px;
