--- a/client/src/components/LoggedInPages/Pages/Jobmarket/Jobmarket.css
+++ b/client/src/components/LoggedInPages/Pages/Jobmarket/Jobmarket.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center;
   font-size: 1.5rem;
-  font-weight: 300;
+  font-weight: var(--text-font-weight);
 }
 
 .job-nav-container {
@@ -132,7 +132,6 @@
   justify-content: center;
   align-items: center;
   color: var(--bg-grey);
-  /* font-weight: 300; */
 }
 
 .details-value {
