--- a/client/src/components/LoggedInPages/Pages/Profiles/Profiles.css
+++ b/client/src/components/LoggedInPages/Pages/Profiles/Profiles.css
@@ -13,7 +13,7 @@
 }
 
 .profiles-title-and-searchbar-container>h1 {
-  font-weight: 230;
+  font-weight: var(--h1-font-weight);
 }
 
 .profiles-searchbar-container {
