--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -458,7 +458,7 @@
 .title-and-logo {
   color: var(--blue);
   text-shadow: 0.5pt 0.5pt 1pt var(--grey);
-  font-weight: 230;
+  font-weight: var(--h1-font-weight);
 }
 
 .title-and-logo:hover {
