--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
   --blue: #0087a8;
   --dark-blue: #005b72;
   --red: #ba0038;
+  --light-green: rgb(219, 255, 219);
   --green: rgb(0, 177, 0);
   --dark-green: rgb(0, 155, 0);
   --bg-grey: hsla(192, 17%, 60%, 0.52);
